--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-JWT_SECRET="886e90e5-d9f1-485a-8d9e-65e49c8f0223";
+JWT_SECRET="886e90e5-d9f1-485a-8d9e-65e49c8f0223"
 JWT_EXPIRE="10d"
 COOKIE_EXPIRE=10
